8199777: Deprecate -XX:+AggressiveOpts
Deprecate -XX:+AggressiveOpts and remove it from testing.

Reviewed-by: kvn, dholmes, shade